Fix colors on h1 in dark mode

--- a/style/dark-mode.css
+++ b/style/dark-mode.css
@@ -52,7 +52,7 @@
 }
 
 /* Text Colors */
-.dark-mode h1{
+.dark-mode #about h1{
     color:blue;
 }
 
